fixed overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -180,6 +180,6 @@ button {
 
 @media (max-width: $responsive-width) {
   .content{
-    min-width: 90vw !important;
+    min-width: 85vw !important;
   }
 }
